add start script

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "bundle:chrome:zip": "run-s build:chrome && zip -r ./web-extension-chrome-v$npm_package_version.zip ./dist",
     "bundle:chrome:crx": "crx pack ./dist -o ./web-extension-chrome-v$npm_package_version.crx",
     "preview": "vite preview",
+    "start": "run-s start:chrome",
+    "start:chrome": "run-s bundle:chrome && ./.github/scripts/start.js chrome",
+    "start:firefox": "run-s bundle:firefox && ./.github/scripts/start.js firefox",
     "test": "run-s test:*",
     "test:lint": "web-ext lint -s ./dist",
     "test:component": "wdio run ./wdio.ui.conf.ts --autoCompileOpts.tsNodeOpts.project ./tsconfig.node.json",
