--- a/public/manifestv2.json
+++ b/public/manifestv2.json
@@ -7,7 +7,7 @@
   "version": "0.0.0",
   "content_scripts": [
     {
-      "matches": ["https://github.com/*"],
+      "matches": ["<all_urls>"],
       "run_at": "document_idle",
       "js": ["./index.global.js"],
       "css": ["./style.css"]
@@ -18,8 +18,10 @@
     "persistent": false
   },
   "browser_action": {
+    "default_area": "navbar",
     "default_popup": "index.html",
-    "default_title": "Open the popup"
+    "default_title": "Open the popup",
+    "default_icon": "icon-72x72.png"
   },
   "permissions": [],
   "icons": {
