--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,15 +9,15 @@
     {
       "matches": ["<all_urls>"],
       "run_at": "document_idle",
-      "js": ["./index.global.js"],
+      "js": ["./contentScript/index.js"],
       "css": ["./style.css"]
     }
   ],
   "background": {
-    "service_worker": "./background.global.js"
+    "service_worker": "./background/background.js"
   },
-  "browser_action": {
-    "default_popup": "index.html",
+  "action": {
+    "default_popup": "./popup/index.html",
     "default_title": "Open the popup"
   },
   "permissions": [],
