--- a/public/manifestv2.json
+++ b/public/manifestv2.json
@@ -9,17 +9,17 @@
     {
       "matches": ["<all_urls>"],
       "run_at": "document_idle",
-      "js": ["./index.global.js"],
+      "js": ["./contentScript/index.js"],
       "css": ["./style.css"]
     }
   ],
   "background": {
-    "page": "background.html",
+    "page": "./background/index.html",
     "persistent": false
   },
   "browser_action": {
     "default_area": "navbar",
-    "default_popup": "index.html",
+    "default_popup": "./popup/index.html",
     "default_title": "Open the popup",
     "default_icon": "icon-72x72.png"
   },
