--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,12 @@
     "default_popup": "./popup/index.html",
     "default_title": "Open the popup"
   },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "addon@example.com",
+      "strict_min_version": "100.0"
+    }
+  },
   "permissions": [],
   "icons": {
     "72": "icon-72x72.png",
