--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "chromedriver": "^112.0.0",
     "crx": "^5.0.1",
     "geckodriver": "^3.2.0",
+    "get-port": "^6.1.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "release-it": "^15.10.1",
@@ -73,6 +74,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vite": "^4.2.1",
+    "wait-on": "^7.0.1",
     "wdio-chromedriver-service": "^8.1.1",
     "wdio-geckodriver-service": "^4.1.1",
     "web-ext": "^7.6.0",
