--- a/package.json
+++ b/package.json
@@ -51,33 +51,34 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
-    "@types/node": "^20.1.0",
-    "@types/react": "^18.0.34",
-    "@types/webextension-polyfill": "^0.10.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "@wdio/browser-runner": "^8.8.0",
-    "@wdio/cli": "^8.8.0",
-    "@wdio/firefox-profile-service": "^8.8.0",
-    "@wdio/mocha-framework": "^8.8.0",
-    "@wdio/spec-reporter": "^8.8.0",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.17",
+    "@types/webextension-polyfill": "^0.10.1",
+    "@vitejs/plugin-react": "^4.0.3",
+    "@wdio/browser-runner": "^8.13.13",
+    "@wdio/cli": "^8.13.14",
+    "@wdio/firefox-profile-service": "^8.10.4",
+    "@wdio/mocha-framework": "^8.13.13",
+    "@wdio/spec-reporter": "^8.12.2",
     "autoprefixer": "^10.4.14",
-    "chromedriver": "^114.0.1",
+    "chrome-launcher": "^1.0.0",
+    "chromedriver": "^115.0.0",
     "crx": "^5.0.1",
-    "geckodriver": "^4.0.0",
+    "geckodriver": "^4.1.3",
     "get-port": "^7.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.21",
-    "release-it": "^16.1.0",
+    "postcss": "^8.4.27",
+    "release-it": "^16.1.3",
     "replace": "^1.2.2",
-    "rimraf": "^5.0.0",
-    "tailwindcss": "^3.3.1",
+    "rimraf": "^5.0.1",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
-    "vite": "^4.2.1",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.7",
     "wait-on": "^7.0.1",
     "wdio-chromedriver-service": "^8.1.1",
-    "wdio-geckodriver-service": "^5.0.1",
-    "web-ext": "^7.6.0",
+    "wdio-geckodriver-service": "^5.0.2",
+    "web-ext": "^7.6.2",
     "webextension-polyfill": "^0.10.0"
   },
   "dependencies": {
