update deps and simplify setup

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "start:firefox:watcher": "npm run watch:firefox",
     "start:firefox:startBrowser": "./.github/scripts/start.js firefox",
     "test": "run-s test:*",
-    "test:component": "wdio run ./wdio.ui.conf.ts --autoCompileOpts.tsNodeOpts.project ./tsconfig.node.json",
-    "test:e2e": "wdio run ./wdio.e2e.conf.ts --autoCompileOpts.tsNodeOpts.project ./tsconfig.node.json",
+    "test:component": "wdio run ./wdio.ui.conf.ts",
+    "test:e2e": "wdio run ./wdio.e2e.conf.ts",
     "version": "run-s version:*",
     "version:update": "npx replace ' \"version\": \"(\\d+).(\\d+).(\\d+)\"' \" \\\"version\\\": \\\"$npm_package_version\\\"\" ./public/*.json",
     "version:bundle": "run-s bundle",
@@ -52,20 +52,17 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20.4.5",
-    "@types/react": "^18.2.17",
+    "@types/react": "^18.2.18",
     "@types/webextension-polyfill": "^0.10.1",
-    "@vitejs/plugin-react": "^4.0.3",
-    "@wdio/browser-runner": "^8.13.13",
-    "@wdio/cli": "^8.13.14",
-    "@wdio/firefox-profile-service": "^8.10.4",
-    "@wdio/mocha-framework": "^8.13.13",
-    "@wdio/spec-reporter": "^8.12.2",
+    "@vitejs/plugin-react": "^4.0.4",
+    "@wdio/browser-runner": "^8.14.2",
+    "@wdio/cli": "^8.14.2",
+    "@wdio/firefox-profile-service": "^8.14.0",
+    "@wdio/mocha-framework": "^8.14.0",
+    "@wdio/spec-reporter": "^8.14.0",
     "autoprefixer": "^10.4.14",
     "chrome-launcher": "^1.0.0",
-    "chromedriver": "^115.0.0",
     "crx": "^5.0.1",
-    "geckodriver": "^4.1.3",
-    "get-port": "^7.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "release-it": "^16.1.3",
@@ -74,10 +71,7 @@
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
-    "vite": "^4.4.7",
-    "wait-on": "^7.0.1",
-    "wdio-chromedriver-service": "^8.1.1",
-    "wdio-geckodriver-service": "^5.0.2",
+    "vite": "^4.4.8",
     "web-ext": "^7.6.2",
     "webextension-polyfill": "^0.10.0"
   },
